--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "font-awesome": "^4.7.0",
+    "izitoast": "^1.4.0",
     "lodash": "^4.17.11",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.1.0",
-    "native-toast": "^2.0.0",
     "roboto-fontface": "^0.8.0",
     "stylus-loader": "^3.0.2",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
+    "vue-router": "^3.1.2",
     "vuetify": "^1.5.16",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.5.5",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-plugin-unit-jest": "^3.8.0",
@@ -43,7 +44,9 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -56,8 +59,12 @@
     "prettier": "^1.18.2",
     "stylus": "^0.54.5",
     "vue-eslint-parser": "^6.0.4",
+    "vue-loader": "^15.7.1",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.39.2"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "eslintConfig": {
     "root": true,
